git subrepo pull assembly
subrepo:
  subdir:   "assembly"
  merged:   "932de4aca6"
upstream:
  origin:   "git@github.com:daisy/pipeline-assembly.git"
  branch:   "master"
  commit:   "2807e3a5f6"
git-subrepo:
  version:  "0.3.1"
  origin:   "???"
  commit:   "???"