@@ -216,13 +216,13 @@ goto :RUN_LOOP
         --add-opens java.base/java.net=ALL-UNNAMED ^
         --add-opens java.base/java.lang=ALL-UNNAMED ^
         --add-opens java.base/java.util=ALL-UNNAMED ^
+        --add-opens java.naming/javax.naming.spi=ALL-UNNAMED ^
+        --add-opens java.rmi/sun.rmi.transport.tcp=ALL-UNNAMED ^
         --add-exports=java.base/sun.net.www.protocol.http=ALL-UNNAMED ^
         --add-exports=java.base/sun.net.www.protocol.https=ALL-UNNAMED ^
         --add-exports=java.base/sun.net.www.protocol.jar=ALL-UNNAMED ^
-        --add-exports=java.xml.bind/com.sun.xml.internal.bind.v2.runtime=ALL-UNNAMED ^
         --add-exports=jdk.xml.dom/org.w3c.dom.html=ALL-UNNAMED ^
         --add-exports=jdk.naming.rmi/com.sun.jndi.url.rmi=ALL-UNNAMED ^
-        --add-modules java.xml.ws.annotation,java.corba,java.transaction,java.xml.bind,java.xml.ws ^
         -Dorg.daisy.pipeline.home="%PIPELINE2_HOME%" ^
         -Dorg.daisy.pipeline.base="%PIPELINE2_BASE%" ^
         -Dorg.daisy.pipeline.data="%PIPELINE2_DATA%" ^
